@@ -1184,9 +1184,9 @@ dba.load <- function(file='DBA', dir='.', pre='dba_', ext='RData')
    
    if(!is.null(res$vectors)) {
       if(!is.null(res$allvectors)) {
-         res$binding    <- res$vectors
-         pv$totalMerged <- nrow(pv$allvectors)
-         res$merged     <- res$allvectors[,1:3]
+         res$binding     <- res$vectors
+         res$totalMerged <- nrow(res$allvectors)
+         res$merged      <- res$allvectors[,1:3]
       } else {
          res$binding     <- res$vectors
          res$merged      <- res$vectors[,1:3]
@@ -1202,8 +1202,9 @@ dba.load <- function(file='DBA', dir='.', pre='dba_', ext='RData')
       } else {
          minOverlap <- res$minOverlap
       }
-      contrasts <- res$contrasts
-      called    <- res$called
+      contrasts  <- res$contrasts
+      called     <- res$called
+      attributes <- res$attributes
       for(i in 1:length(res$peaks)) {
          if(is.factor(res$peaks[[i]][,1])) {
             res$peaks[[i]][,1] <- as.character(res$peaks[[i]][,1])
@@ -1211,8 +1212,9 @@ dba.load <- function(file='DBA', dir='.', pre='dba_', ext='RData')
       }
       res <- pv.vectors(res,minOverlap=minOverlap,bAllSame=pv.allSame(res),
                         merge=is.null(res$merged))
-      res$contrasts <- contrasts
-      res$called    <- called
+      res$contrasts  <- contrasts
+      res$called     <- called
+      res$attributes <- attributes
    }
    
    if(is.null(res$config$DataType)) {
@@ -1245,6 +1247,10 @@ dba.load <- function(file='DBA', dir='.', pre='dba_', ext='RData')
    
    if(is.null(res$bCorPlot)){
       res$config$bCorPlot=FALSE
+   }
+   
+   if(class(res$attributes) == "function") {
+      res$attributes <- NULL
    }
    
    if(is.null(res$config$th)){
