@@ -38,9 +38,9 @@ pv.check <- function(pv,bCheckEmpty=FALSE,bCheckSort=TRUE,bDoVectors=TRUE) {
    }
    if(!is.null(pv$vectors)) {
       if(!is.null(pv$allvectors)) {
-         pv$binding    <- pv$vectors
+         pv$binding     <- pv$vectors
          pv$totalMerged <- nrow(pv$allvectors)
-         pv$merged     <- pv$allvectors[,1:3]
+         pv$merged      <- pv$allvectors[,1:3]
       } else {
          pv$binding     <- pv$vectors
          pv$merged      <- pv$vectors[,1:3]
@@ -57,8 +57,9 @@ pv.check <- function(pv,bCheckEmpty=FALSE,bCheckSort=TRUE,bDoVectors=TRUE) {
          minOverlap <- pv$minOverlap
       }
       if(bDoVectors) {
-         contrasts <- pv$contrasts
-         called    <- pv$called
+         contrasts  <- pv$contrasts
+         called     <- pv$called
+         attributes <- pv$attributes
          for(i in 1:length(pv$peaks)) {
             if(is.factor(pv$peaks[[i]][,1])) {
                pv$peaks[[i]][,1] <- as.character(pv$peaks[[i]][,1])
@@ -66,8 +67,9 @@ pv.check <- function(pv,bCheckEmpty=FALSE,bCheckSort=TRUE,bDoVectors=TRUE) {
          }
          pv <- pv.vectors(pv,minOverlap=minOverlap,bAllSame=pv.allSame(pv),
                           merge=is.null(pv$merged))
-         pv$contrasts <- contrasts
-         pv$called    <- called
+         pv$contrasts  <- contrasts
+         pv$called     <- called
+         pv$attributes <- attributes
       }
    }
    
@@ -82,6 +84,10 @@ pv.check <- function(pv,bCheckEmpty=FALSE,bCheckSort=TRUE,bDoVectors=TRUE) {
    
    if(is.null(pv$config$bCorPlot)) {
       pv$config$bCorPlot <- FALSE
+   }
+   
+   if(class(pv$attributes) == "function") {
+      pv$attributes <- NULL
    }
    
    if(is.null(pv$config$th)){
